5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1679_1100.log
== TEST (2019-04-30 16:42:44) 
-- CODE:
x=1
z=2
print(x) and print (z)


-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:28:59) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:29:15) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 14:29:31) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.173306
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:29:49) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:29:59) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:29:59) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 14:30:11) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.24283
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:30:16) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:30:30) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 14:30:43) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- EXECUTION TIME:
0.138055
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Garoupa
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Onca-pintada
Entrada: 50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:07) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:11) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:26) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:31) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:50) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:53) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:31:53) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:32:09) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:32:14) 
-- CODE:
var=int(input("valor da cedula:"))

if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
-- OUTPUT:
Garoupa
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:33:05) 
-- CODE:
var=int(input("valor da cedula:"))
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
	print("Animal:",Y)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
if(var==2):
	Y="Tartaruga"
	print(Y)
elif(var==5):
	Y="Garca"
	print(Y)
elif(var==10):
	Y="Arara"
	print(Y)
elif(var==20):
	Y="Mico-leao-dourado"
	print(Y)
elif(var==50):
	Y="Onca-pintada"
	print(Y)
elif(var==100):
	Y="Garoupa"
	print(Y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Animal:",Y)
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:40:04) 
-- CODE:
var=int(input("valor da cedula:"))
x="Tartaruga"
z="Garca"
c="Arara"
v="Mico-leoa-dourado"
b="Onca-pintada"
n="Garoupa"
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
if(var==2):
	print("Animal:",x)
elif(var==5):
	print("Animal:",z)
elif(var==10):
	print("Animal:",c)
elif(var==20):
	print("Animal:",v)
elif(var==50):
	print("Animal:",b
elif(var==100):
	print("Animal:",n)

-- ERROR:
File "XXXX", line 23
    elif(var==100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:40:43) 
-- CODE:
var=int(input("valor da cedula:"))
x="Tartaruga"
z="Garca"
c="Arara"
v="Mico-leoa-dourado"
b="Onca-pintada"
n="Garoupa"
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
if(var==2):
	print("Animal:",x)
elif(var==5):
	print("Animal:",z)
elif(var==10):
	print("Animal:",c)
elif(var==20):
	print("Animal:",v)
elif(var==50):
	print("Animal:",b
elif(var==100):
	print("Animal:",n)

-- ERROR:
File "XXXX", line 23
    elif(var==100):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 14:41:00) 
-- CODE:
var=int(input("valor da cedula:"))
x="Tartaruga"
z="Garca"
c="Arara"
v="Mico-leoa-dourado"
b="Onca-pintada"
n="Garoupa"
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
if(var==2):
	print("Animal:",x)
elif(var==5):
	print("Animal:",z)
elif(var==10):
	print("Animal:",c)
elif(var==20):
	print("Animal:",v)
elif(var==50):
	print("Animal:",b)
elif(var==100):
	print("Animal:",n)

-- OUTPUT:
Entrada: 100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 14:41:08) 
-- CODE:
var=int(input("valor da cedula:"))
x="Tartaruga"
z="Garca"
c="Arara"
v="Mico-leoa-dourado"
b="Onca-pintada"
n="Garoupa"
if((var==2) or (var==5) or (var==10) or (var==20) or (var==50) or (var==100)):
	print("Entrada:",var)
else:	
	print("Entrada:",var)
	print("Animal: Invalido")
if(var==2):
	print("Animal:",x)
elif(var==5):
	print("Animal:",z)
elif(var==10):
	print("Animal:",c)
elif(var==20):
	print("Animal:",v)
elif(var==50):
	print("Animal:",b)
elif(var==100):
	print("Animal:",n)

-- EXECUTION TIME:
0.152223
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada: 100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada: 7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada: 50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
